added controllers and changed open api schema
